# image_scorer

./: .gitignore  DATA.md  Dockerfile  README.md  ae_scorer_server.py  dprint.json  gleam.toml  make_images_json.py  manifest.toml  package.json  playwright.config.js  pyproject.toml
.github/workflows/: playwright.yml
e2e-tests/: pages.spec.js
priv/: image_modal.js  index.html  index.js  main.css  main.js  pref.css  pref.js  preference.html  rate.css  rate.html  rate.js  rating.css  ratings.html  ratings.js  similarity.css  similarity.html  similarity.js
priv/2_preference/: index.html
priv/4_preference/: index.html  pref.css  pref.js
priv/migrations/: 00001_init.down.sql  00001_init.up.sql
priv/rate/: index.html  rate.css  rate.js
priv/ratings/: index.html  rating.css  ratings.js
priv/scores/: index.html  index.js
priv/similarity/: index.html  similarity.js
src/: image_scorer.gleam
src/image_scorer/: db.gleam  error.gleam  image.gleam  image_score.gleam  message.gleam  preference.gleam  rating.gleam  user.gleam  user_image.gleam
test/: image_scorer_test.gleam
test/image_scorer/: image_score_test.gleam  image_test.gleam  preference_test.gleam  rating_test.gleam
